[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/settings_panel/buffer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/settings_panel/category.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/settings_panel/settings_panel.gd" type="Script" id=3]
[ext_resource path="res://scenes/settings_panel/inputs/button_input.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/menu/BoxInactive.png" type="Texture" id=5]
[ext_resource path="res://textures/menu/BoxFocus.png" type="Texture" id=6]

[node name="SettingsPanel" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 466.0
theme_type_variation = "_Settings"
script = ExtResource( 3 )

[node name="H" type="HBoxContainer" parent="."]
margin_right = 466.0
margin_bottom = 1080.0

[node name="Tabs" type="VBoxContainer" parent="H"]
margin_right = 75.0
margin_bottom = 1080.0
rect_min_size = Vector2( 75, 0 )
theme_type_variation = "SeparationP00"

[node name="Category1" parent="H/Tabs" instance=ExtResource( 2 )]

[node name="Buffer" type="ColorRect" parent="H/Tabs"]
margin_top = 75.0
margin_right = 75.0
margin_bottom = 1005.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.392157 )

[node name="Back" parent="H/Tabs" instance=ExtResource( 2 )]
margin_top = 1005.0
margin_bottom = 1080.0

[node name="Menu" type="VBoxContainer" parent="H"]
margin_left = 79.0
margin_right = 466.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Settings" type="ScrollContainer" parent="H/Menu"]
margin_right = 387.0
margin_bottom = 1080.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="V" type="VBoxContainer" parent="H/Menu/Settings"]
margin_right = 375.0
margin_bottom = 1330.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="H/Menu/Settings/V"]
margin_right = 375.0
margin_bottom = 66.0
theme_type_variation = "FontRegular045"
text = "Settings"
align = 1

[node name="Description" type="Label" parent="H/Menu/Settings/V"]
margin_top = 70.0
margin_right = 375.0
margin_bottom = 109.0
text = "Change how the game runs."
align = 1

[node name="Buffer1" parent="H/Menu/Settings/V" instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 113.0
margin_right = 262.0
margin_bottom = 146.0

[node name="Keybinds" type="VBoxContainer" parent="H/Menu/Settings/V"]
margin_left = 127.0
margin_top = 150.0
margin_right = 247.0
margin_bottom = 361.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="H/Menu/Settings/V/Keybinds"]
margin_right = 120.0
margin_bottom = 39.0
theme_type_variation = "FontBold26"
text = "Keybinds"
align = 1

[node name="LeftKat" parent="H/Menu/Settings/V/Keybinds" instance=ExtResource( 4 )]
margin_right = 120.0
margin_bottom = 82.0

[node name="LeftDon" parent="H/Menu/Settings/V/Keybinds" instance=ExtResource( 4 )]
margin_top = 86.0
margin_right = 120.0
margin_bottom = 125.0

[node name="RightDon2" parent="H/Menu/Settings/V/Keybinds" instance=ExtResource( 4 )]
margin_top = 129.0
margin_right = 120.0
margin_bottom = 168.0

[node name="RightKat2" parent="H/Menu/Settings/V/Keybinds" instance=ExtResource( 4 )]
margin_top = 172.0
margin_right = 120.0
margin_bottom = 211.0

[node name="Buffer2" parent="H/Menu/Settings/V" instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 365.0
margin_right = 262.0
margin_bottom = 398.0

[node name="Resolution" type="VBoxContainer" parent="H/Menu/Settings/V"]
margin_left = 80.0
margin_top = 402.0
margin_right = 295.0
margin_bottom = 541.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="H/Menu/Settings/V/Resolution"]
margin_right = 215.0
margin_bottom = 39.0
theme_type_variation = "FontBold26"
text = "Resolution (WIP)"
align = 1

[node name="Options" type="OptionButton" parent="H/Menu/Settings/V/Resolution"]
margin_left = 93.0
margin_top = 43.0
margin_right = 122.0
margin_bottom = 88.0
size_flags_horizontal = 4

[node name="Fullscreen" type="HBoxContainer" parent="H/Menu/Settings/V/Resolution"]
margin_top = 92.0
margin_right = 215.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="H/Menu/Settings/V/Resolution/Fullscreen"]
margin_top = 4.0
margin_right = 187.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="Toggle" type="CheckBox" parent="H/Menu/Settings/V/Resolution/Fullscreen"]
margin_left = 191.0
margin_right = 215.0
margin_bottom = 47.0

[node name="Buffer3" parent="H/Menu/Settings/V" instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 545.0
margin_right = 262.0
margin_bottom = 578.0

[node name="AudioLabel" type="Label" parent="H/Menu/Settings/V"]
margin_top = 582.0
margin_right = 375.0
margin_bottom = 621.0
theme_type_variation = "FontBold26"
text = "Audio"
align = 1

[node name="Offset" type="HBoxContainer" parent="H/Menu/Settings/V"]
margin_left = 101.0
margin_top = 625.0
margin_right = 274.0
margin_bottom = 674.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="H/Menu/Settings/V/Offset"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 44.0
text = "Offset"

[node name="LineEdit" type="SpinBox" parent="H/Menu/Settings/V/Offset"]
margin_left = 75.0
margin_right = 173.0
margin_bottom = 49.0
min_value = -200.0
max_value = 200.0
allow_greater = true
allow_lesser = true
align = 2

[node name="HSlider" type="HSlider" parent="H/Menu/Settings/V"]
margin_top = 678.0
margin_right = 375.0
margin_bottom = 788.0
min_value = -200.0
max_value = 200.0

[node name="Buffer4" parent="H/Menu/Settings/V" instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 792.0
margin_right = 262.0
margin_bottom = 825.0

[node name="ExtraDisplays" type="VBoxContainer" parent="H/Menu/Settings/V"]
margin_left = 79.0
margin_top = 829.0
margin_right = 295.0
margin_bottom = 968.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="H/Menu/Settings/V/ExtraDisplays"]
margin_right = 216.0
margin_bottom = 39.0
theme_type_variation = "FontBold26"
text = "Extra Displays"
align = 1

[node name="LateEarly" type="HBoxContainer" parent="H/Menu/Settings/V/ExtraDisplays"]
margin_top = 43.0
margin_right = 216.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="H/Menu/Settings/V/ExtraDisplays/LateEarly"]
margin_top = 3.0
margin_right = 183.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Late/Early Text"

[node name="Options" type="OptionButton" parent="H/Menu/Settings/V/ExtraDisplays/LateEarly"]
margin_left = 187.0
margin_right = 216.0
margin_bottom = 45.0

[node name="HitError" type="HBoxContainer" parent="H/Menu/Settings/V/ExtraDisplays"]
margin_top = 92.0
margin_right = 216.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="H/Menu/Settings/V/ExtraDisplays/HitError"]
margin_top = 4.0
margin_right = 188.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Hit Error Bar"

[node name="Toggle" type="CheckBox" parent="H/Menu/Settings/V/ExtraDisplays/HitError"]
margin_left = 192.0
margin_right = 216.0
margin_bottom = 47.0

[node name="Buffer5" parent="H/Menu/Settings/V" instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 972.0
margin_right = 262.0
margin_bottom = 1005.0

[node name="DebugLabel" type="Label" parent="H/Menu/Settings/V"]
margin_top = 1009.0
margin_right = 375.0
margin_bottom = 1048.0
theme_type_variation = "FontBold26"
text = "Debug"
align = 1

[node name="GamePathLabel" type="Label" parent="H/Menu/Settings/V"]
margin_top = 1052.0
margin_right = 375.0
margin_bottom = 1091.0
size_flags_horizontal = 3
text = "Game Path"
align = 1

[node name="GamePathText" type="Label" parent="H/Menu/Settings/V"]
margin_top = 1095.0
margin_right = 375.0
margin_bottom = 1134.0
size_flags_horizontal = 3
align = 1
autowrap = true

[node name="GamePathButton" type="Button" parent="H/Menu/Settings/V"]
margin_left = 65.0
margin_top = 1138.0
margin_right = 310.0
margin_bottom = 1183.0
size_flags_horizontal = 4
text = "Change Game Path"

[node name="ChangeSkinButton" type="Button" parent="H/Menu/Settings/V"]
margin_left = 105.0
margin_top = 1187.0
margin_right = 269.0
margin_bottom = 1232.0
size_flags_horizontal = 4
text = "Change Skin"

[node name="RemoveSkinButton" type="Button" parent="H/Menu/Settings/V"]
margin_left = 102.0
margin_top = 1236.0
margin_right = 272.0
margin_bottom = 1281.0
size_flags_horizontal = 4
text = "Remove Skin"

[node name="SongsFolder" type="Button" parent="H/Menu/Settings/V"]
margin_left = 53.0
margin_top = 1285.0
margin_right = 322.0
margin_bottom = 1330.0
size_flags_horizontal = 4
text = "Change Songs Folder"

[node name="Preferences" type="ScrollContainer" parent="H/Menu"]
visible = false
margin_top = 515.0
margin_right = 387.0
margin_bottom = 1026.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="V" type="VBoxContainer" parent="H/Menu/Preferences"]
margin_right = 387.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="H/Menu/Preferences/V"]
margin_right = 387.0
margin_bottom = 66.0
theme_type_variation = "FontRegular045"
text = "Preferences"
align = 1

[node name="Buffer" parent="H/Menu/Preferences/V" instance=ExtResource( 1 )]
margin_left = 118.0
margin_top = 70.0
margin_right = 268.0
margin_bottom = 103.0

[node name="Description" type="Label" parent="H/Menu/Preferences/V"]
margin_top = 107.0
margin_right = 387.0
margin_bottom = 146.0
text = "uhm... cheesed to meet you?"
align = 1

[node name="AnimatedSprite" type="TextureRect" parent="H/Menu/Preferences/V"]
margin_top = 150.0
margin_right = 387.0
margin_bottom = 150.0

[node name="Tabs" type="HBoxContainer" parent="H/Menu"]
visible = false
margin_top = 1030.0
margin_right = 387.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 50 )
theme_type_variation = "SeparationP00"

[node name="Settings" type="NinePatchRect" parent="H/Menu/Tabs"]
margin_right = 193.0
margin_bottom = 50.0
size_flags_horizontal = 3
theme_type_variation = "_Settings"
texture = ExtResource( 6 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="Label" type="Label" parent="H/Menu/Tabs/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Options"
align = 1
valign = 1

[node name="Preferences" type="NinePatchRect" parent="H/Menu/Tabs"]
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
margin_left = 193.0
margin_right = 387.0
margin_bottom = 50.0
size_flags_horizontal = 3
theme_type_variation = "_Settings"
texture = ExtResource( 5 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="Label" type="Label" parent="H/Menu/Tabs/Preferences"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Preferences"
align = 1
valign = 1

[connection signal="item_selected" from="H/Menu/Settings/V/Resolution/Options" to="." method="change_res"]
[connection signal="toggled" from="H/Menu/Settings/V/Resolution/Fullscreen/Toggle" to="." method="toggle_fullscreen"]
[connection signal="value_changed" from="H/Menu/Settings/V/Offset/LineEdit" to="." method="change_offset"]
[connection signal="value_changed" from="H/Menu/Settings/V/HSlider" to="." method="change_offset"]
[connection signal="item_selected" from="H/Menu/Settings/V/ExtraDisplays/LateEarly/Options" to="." method="late_early"]
[connection signal="toggled" from="H/Menu/Settings/V/ExtraDisplays/HitError/Toggle" to="." method="hit_error_func"]
[connection signal="button_up" from="H/Menu/Settings/V/GamePathButton" to="." method="game_path_button_pressed"]
[connection signal="button_up" from="H/Menu/Settings/V/ChangeSkinButton" to="." method="skin_button_pressed"]
[connection signal="button_up" from="H/Menu/Settings/V/RemoveSkinButton" to="." method="remove_skin"]
[connection signal="button_up" from="H/Menu/Settings/V/SongsFolder" to="." method="change_songs_button_pressed"]
